fixed SonarQube warnings reported by Eclipse plugin